force-app/main/default/objects/KPI_Target__c/KPI_Target__c.object-meta.xml
<CustomObject>
    <description>Metas KPI por período y dimensiones de análisis.</description>
    <label>KPI Target</label>
    <nameField>
        <label>KPI Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>