force-app/main/default/objects/KPI_Target__c/fields/DD_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>DD_Pipeline__c</fullName>
    <label>DD Pipeline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>