force-app/main/default/objects/KPI_Target__c/fields/Integrations__c.field-meta.xml
<CustomField>
    <fullName>Integrations__c</fullName>
    <label>Integrations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>