force-app/main/default/objects/KPI_Target__c/fields/New_Signed__c.field-meta.xml
<CustomField>
    <fullName>New_Signed__c</fullName>
    <label>New Signed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>