force-app/main/default/objects/KPI_Target__c/fields/New_Traffic__c.field-meta.xml
<CustomField>
    <fullName>New_Traffic__c</fullName>
    <label>New Traffic</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>