force-app/main/default/objects/KPI_Target__c/fields/Total_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Total_Go_Live__c</fullName>
    <label>Total Go Live</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>